--- a/index.html
+++ b/index.html
@@ -35,12 +35,16 @@
                         <a href="#contact" class="nav__link">Contact</a>
                     </li>
                 </ul>
+
+                <div class="nav__close" id="nav-close">
+                    <i class="ri-close-line"></i>
+                </div>
             </div>
             <div class="nav__btns">
                 <a href="#" class="change-theme" id="theme-button">Magic</a>
-                <!-- <div class="nav__toggle" id="nav-toggle">
+                <div class="nav__toggle" id="nav-toggle">
                     <i class="ri-menu-line"></i>
-                </div> -->
+                </div>
             </div>
         </nav>
     </header>
@@ -106,7 +110,7 @@
                         I'm gonna blur awayyyyyyy!
                     </p>
 
-                    <a href="#works" class="button--link button--flex">
+                    <a href="#works" class="about__button button--link button--flex">
                         My works<i class="ri-arrow-left-down-line button__icon button__icon-left-down"></i>
                     </a>
                 </div>
@@ -186,7 +190,7 @@
                         </div>
                     </div>
 
-                    <button class="button button--flex">
+                    <button class="contact__button button button--flex">
                         Send Message
                         <i class="ri-chat-smile-3-line button__icon button__icon-right"></i>
                     </button>
