--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
                     <p class="about__description">
                         Watch out!<br>
-                        I'm gonna blur awayyyyyyy!
+                        I'm gonna blur awayyyyyy!
                     </p>
 
                     <a href="#works" class="about__button button--link button--flex">
