meta tags refine

--- a/index.html
+++ b/index.html
@@ -4,7 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+
+    <meta name="keywords" content="blur design">
+    <meta name="description" content="blur design works show">
+    <meta name="author" content="Sean Li">
+    <meta property="og:title" content="Blur Design">
+    <meta property="og:description" content="Blur design steps and works show">
+    <meta property="og:image" content="./assets/img/meta.png">
+
     <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
 
     <link rel="stylesheet" href="./assets/css/style.css">
